# synapse

./: .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  3976.misc  4887.bugfix  6053.bugfix  AUTHORS.rst  Big Hack?  CAPTCHA_SETUP  CHANGES.md  CHANGES.rst  CHANGES_HOTFIXES.md  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  Dockerfile  Dockerfile-pgtests  Dockerfile-sytest  Dockerfile-sytestpy2  Dockerfile-sytestpy3  INSTALL.md  ISSUE_TEMPLATE.md  MANIFEST.in  MAP.rst  Makefile  README.md  README.rst  UPGRADE  UPGRADE.rst  VERSION  WISHLIST.rst  add_user_type_to_users.sql  book.toml  (+44 more)
.buildkite/: .env  docker-compose.py27.pg94.yaml  docker-compose.py27.pg95.yaml  docker-compose.py35.pg94.yaml  docker-compose.py35.pg95.yaml  docker-compose.py37.pg11.yaml  docker-compose.py37.pg95.yaml  docker-compose.py38.pg12.yaml  docker-compose.sytest.py37.redis.yaml  format_tap.py  merge_base_branch.sh  pipeline.yml  postgres-config.yaml  sqlite-config.yaml  synapse_sytest.sh  worker-blacklist
.ci/: complement_package.gotpl  docker-compose.yaml  latest_deps_build_failed_issue_template.md  patch_for_twisted_trunk.sh  pipeline.yml  postgres-config.yaml  sqlite-config.yaml  twisted_trunk_build_failed_issue_template.md  worker-blacklist
.circleci/: config.yml  merge_base_branch.sh
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  workflows.yml
.sonarqube/: README.md  sonar-project.properties
Design/: Design - pegacorn-communicate-roomserver.txt
changelog.d/: 0000.misc  1.bugfix  1.feature  10.bugfix  10.misc  10001.misc  10002.bugfix  10011.feature  10013.misc  10014.bugfix  10015.bugfix  10016.doc  10017.misc  10018.misc  10029.bugfix  10033.bugfix  10035.feature  10036.misc  10038.feature  10039.misc  10040.feature  10043.doc  10044.feature  10045.docker  10046.doc  10049.misc  10050.misc  10053.bugfix  10054.misc  10054.removal  10055.misc  10057.doc  10059.misc  10062.removal  10063.removal  10069.misc  10074.misc  10077.feature  10078.misc  10079.bugfix  (+6504 more)
ci/: postgres-config.yaml  sqlite-config.yaml
cmdclient/: console.py  http.py
contrib/: README.rst  example_log_config.yaml
debian/: .gitignore  NEWS  build_debian.sh  build_virtualenv  changelog  clean  config  control  cookiecutter.json  copyright  dirs  gbp.conf  hash_password.1  hash_password.ronn  homeserver.yaml  install  log.yaml  manage_debconf.pl  manpages  matrix-synapse-py3.config  matrix-synapse-py3.default  matrix-synapse-py3.links  matrix-synapse-py3.postinst  matrix-synapse-py3.preinst  matrix-synapse-py3.triggers  matrix-synapse-worker@.service  matrix-synapse.default  matrix-synapse.init  matrix-synapse.links  matrix-synapse.postinst  matrix-synapse.service  matrix-synapse.triggers  pydist-overrides  register_new_matrix_user.1  register_new_matrix_user.ronn  rules  synapse_port_db.1  synapse_port_db.ronn  synapse_review_recent_signups.1  synapse_review_recent_signups.ronn  (+4 more)
demo/: .gitignore  README  README.md  clean.sh  demo.tls.dh  start.sh  stop.sh  webserver.py
dev-docs/: conf.py  index.rst
develop/: 404.html  CAPTCHA_SETUP.html  MSC1711_certificates_FAQ.html  application_services.html  auth_chain_difference_algorithm.html  code_style.html  consent_tracking.html  delegate.html  deprecation_policy.html  federate.html  index.html  jwt.html  log_contexts.html  manhole.html  media_repository.html  message_retention_policies.html  metrics-howto.html  modules.html  openid.html  opentracing.html  password_auth_providers.html  postgres.html  presence_router_module.html  print.html  replication.html  reverse_proxy.html  room_and_user_statistics.html  sample_config.yaml  searchindex.js  searchindex.json  server_notices.html  spam_checker.html  sso_mapping_providers.html  structured_logging.html  synctl_workers.html  tcp_replication.html  templates.html  turn-howto.html  upgrade.html  url_previews.html  (+3 more)
docker/: Dockerfile  Dockerfile-cargo-cache  Dockerfile-custom-base  Dockerfile-dhvirtualenv  Dockerfile-optimised  Dockerfile-pgtests  Dockerfile-pyston  Dockerfile-workers  Dockerfile-workers-complement  MoveToComplement.Dockerfile  README-testing.md  README.md  build_debian.sh  build_debian_packages.sh  build_push.sh  caddy.complement.json  configure_workers_and_start.py  database.yaml  docker-compose.yaml  editable.Dockerfile  generate_shared_worker_config.py  log_to_slack.py  prefix-log  run_pg_tests.sh  s3-cronjob  start.py  supervisord.conf  worker.yaml.j2
docs/: .sample_config_header.yaml  9558.removal  ACME.md  ACME.rst  CAPTCHA_SETUP  CAPTCHA_SETUP.md  CAPTCHA_SETUP.rst  MSC1711_certificates_FAQ.md  README.md  README.rst  SUMMARY.md  account_validity.md  ancient_architecture_notes.md  ancient_architecture_notes.rst  application_services.md  application_services.rst  architecture.md  architecture.rst  auth_chain_difference_algorithm.md  cancellation.md  code_style.md  code_style.rst  consent_tracking.md  definitions.rst  delegate.md  deprecation_policy.md  documentation_style.rst  federate.md  federating.md  federation_side_bus.md  federation_side_bus.rst  freenode.txt  human-id-rules.rst  internal_api.md  jwt.md  log_contexts.md  log_contexts.rst  manhole.md  media_repository.md  media_repository.rst  (+54 more)
event_rs/: Cargo.toml
event_rs/src/: lib.rs
example/: test_messaging.py
experiments/: cursesio.py  test_messaging.py
graph/: graph.py  graph2.py
helm/: Chart.yaml
jenkins/: clone.sh  prepare_synapse.sh
latest/: 404.html  CAPTCHA_SETUP.html  MSC1711_certificates_FAQ.html  application_services.html  auth_chain_difference_algorithm.html  code_style.html  consent_tracking.html  delegate.html  deprecation_policy.html  federate.html  index.html  (+31 more)
rust/: Cargo.toml  build.rs
rust/benches/: evaluator.rs  glob.rs  tree_cache.rs
rust/src/: lib.rs  lru_cache.rs  push.rs  tree_cache.rs
rust/src/acl/: mod.rs
rust/src/http/: mod.rs  resolver.rs
rust/src/push/: base_rules.rs  evaluator.rs  mod.rs  utils.rs
rust/src/tree_cache/: binding.rs  mod.rs
(+6602 files in other folders)
