# We make the whole Synapse folder a workspace so that we can run `cargo`
# commands from the root (rather than having to cd into rust/).

[workspace]
members = ["rust"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

## needs cargo >= 1.59 (https://doc.rust-lang.org/cargo/reference/unstable.html#profile-strip-option)
# strip = true
