[package]
name = "synapse_events"
version = "0.1.0"
edition = "2021"
authors = ["Erik"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
pyo3 = { version = "0.16.1", features = ["extension-module", "anyhow"] }
pythonize = "0.16.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
signed-json = { git = "https://github.com/erikjohnston/rust-signed-json.git" }
